Fixed search box issues on IE11

--- a/css/default.css
+++ b/css/default.css
@@ -186,6 +186,7 @@ search-box form {
 
 search-box form input[type="search"] {
   width: 48.6rem;
+  height: 4rem;
   border: none;
   font: 1.6em/4rem Montserrat, Helvetica, sans-serif;
   outline: none;
